# amazon-nova-samples

./: .gitignore  bot.py
.claude-plugin/: marketplace.json
customization/: README.md
docs/: TROUBLESHOOTING_GUIDE.md  cloudwatch-queries.md
multimodal-understanding/nova-meta-prompter/: CLAUDE.md  README.md  nova_metaprompter_showcase.ipynb  pyproject.toml  transform.py
multimodal-understanding/nova-meta-prompter/data/docs/nova/general/: document_understanding.txt  few_shot_prompting.txt  image_understanding.txt  multilingual.txt  provide_supporting_text.txt  reasoning_mode.txt  tool_use.txt  video_understanding.txt
multimodal-understanding/nova-meta-prompter/data/prompts/: prompt_intent_classifier.txt  prompt_intent_classifier_system.txt
multimodal-understanding/nova-meta-prompter/eval/: intent_classification_ground_truth.jsonl  run_intent_classification_eval.py
multimodal-understanding/nova-meta-prompter/examples/: sample_prompts.jsonl
multimodal-understanding/nova-meta-prompter/nova_metaprompter/: __init__.py  batch_transform.py  transform.py
multimodal-understanding/nova-meta-prompter/nova_metaprompter/data/docs/nova/: migration_guidelines.txt
multimodal-understanding/nova-meta-prompter/nova_metaprompter/data/docs/nova/general/: agentic.txt  chain_of_thought_prompting.txt  document_understanding.txt  long_context.txt  tool_use.txt
multimodal-understanding/nova-meta-prompter/nova_metaprompter/data/prompts/: prompt_intent_classifier.txt  prompt_intent_classifier_system.txt  prompt_judge.txt  prompt_judge_system.txt  prompt_nova_migration.txt
(+742 files in other folders)
