[project]
name = "nova-metaprompter"
version = "0.1.0"
description = "Transform prompts to align with Amazon Nova guidelines."
readme = "README.md"
authors = [
    { name = "Arlind Nocaj", email = "arlind.nocaj@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.47",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.1.1"]

[project.scripts]
nova-metaprompter-batch = "nova_metaprompter.batch_transform:main"

[tool.hatch.build.targets.wheel]
packages = ["nova_metaprompter"]

[tool.hatch.build.targets.wheel.sources]
"nova_metaprompter" = "nova_metaprompter"

[tool.hatch.build.targets.sdist]
include = [
    "nova_metaprompter/**/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
